--- a/resume.html
+++ b/resume.html
@@ -175,7 +175,7 @@ a {
             </span>
             <span class='divider'>|</span>
             <span class='url'>
-              <a href='https://twitter.com/kuanyingchou'>https://twitter.com/kuanyingchou</a>
+              <a href='https://www.facebook.com/kuanying'>https://www.facebook.com/kuanying</a>
             </span>
             <span class='divider'>|</span>
             <span class='url'>
@@ -246,11 +246,11 @@ a {
       </div>
       <div class='separator'></div>
       <div class='blockHeader'>
-        <span class='title'>Innovative Management 360, Software Engineer Intern</span>
+        <span class='title'>TREEZ (Innovative Management 360), Software Engineer Intern</span>
         <span class='date'>
           2015-10-06-2015-11-26
         </span>
-        <div class='website'><a href='http://innovativemanagement360.com'>http://innovativemanagement360.com</a></div>
+        <div class='website'><a href='http://treez.io'>http://treez.io</a></div>
         <ul class='highlights'>
           <li>Maintained the front-end for a legacy POS system for dispensaries</li>
         </ul>
